Create end of game congratulations modal

--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+
+    <div id="congratulationsModal" class="modal">
+		<div class="modal-content">
+			<h1 id="congratulations">Congratulations!</h1>
+			<h2>Would you like to play again?</h2>
+			<div id="buttons">
+				<button id="yes">Yes</button>
+				<button id="no">No</button>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
