Create modal pop up for the end of game

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     <script src="js/resources.js"></script>
@@ -12,8 +13,7 @@
 
     <div id="congratulationsModal" class="modal">
 		<div class="modal-content">
-			<h1 id="congratulations">Congratulations!</h1>
-			<h2>Would you like to play again?</h2>
+			<h1 id="congratulations">Play Again?</h1>
 			<div id="buttons">
 				<button id="yes">Yes</button>
 				<button id="no">No</button>
